--- a/src/Home.css
+++ b/src/Home.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.Home-header {
   /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
@@ -22,6 +22,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Home-header p {
+    color: #f00;
+    mix-blend-mode: difference;
 }
 
 .App-link {
