--- a/src/components/text/TypingText.css
+++ b/src/components/text/TypingText.css
@@ -4,6 +4,7 @@
   display: inline-block;
   overflow: visible;
   font-size: 1.5rem;
+  line-height: 1;
   position: relative;
   width: fit-content;
 }
@@ -13,11 +14,28 @@
   display: inline-block;
   width: 0.25em;
   height: 1em;
+  vertical-align: top;
   background-color: white;
   position: absolute;
   right: -0.5em;
   top: 0;
   animation: blink-caret 0.75s step-end infinite;
+}
+
+.typewriter.done {
+  font-family: monospace;
+  white-space: nowrap;
+  display: inline-block;
+  overflow: visible;
+  font-size: 1.5rem;
+  line-height: 1;
+  position: relative;
+  width: fit-content;
+}
+
+.typewriter.done::after {
+  content: none;
+  animation: none;
 }
 
 @keyframes blink-caret {
