--- a/src/components/text/TypingText.css
+++ b/src/components/text/TypingText.css
@@ -1,7 +1,7 @@
 .typewriter {
   font-family: monospace;
   white-space: nowrap;
-  display: inline-block;
+  display: block;
   overflow: visible;
   font-size: 1.5rem;
   line-height: 1;
@@ -17,7 +17,6 @@
   vertical-align: top;
   background-color: white;
   position: absolute;
-  right: -0.5em;
   top: 0;
   animation: blink-caret 0.75s step-end infinite;
 }
@@ -25,7 +24,7 @@
 .typewriter.done {
   font-family: monospace;
   white-space: nowrap;
-  display: inline-block;
+  display: block;
   overflow: visible;
   font-size: 1.5rem;
   line-height: 1;
