--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,8 +1,13 @@
-.face {
+.summary {
     width: 25%;
     height: 25%;
-    float: left;
-    z-index: 2;
     margin-right: 5%;
     margin-bottom: 5%;
+    float: left;
+}
+
+.face {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
