--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -8,6 +8,17 @@
 
 .face {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 1;
     border-radius: 50%;
+}
+
+.face-placeholder {
+    /* background-color: var(--colors-secondary); */
+    opacity: 0.5;
+    animation: fade 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) infinite;
+}
+
+@keyframes fade {
+  0%,100% { background-color: var(--colors-primary) }
+  50% { background-color: var(--colors-secondary) }
 }
