--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,9 +1,24 @@
 .summary {
+    position: relative;
     width: max(25%, 120px);
     height: 25%;
     margin-right: 5%;
     margin-bottom: 5%;
     float: left;
+}
+
+.summary::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    background-color: #585858;
+    border-radius: 25px;
+
+    opacity: 0.7;
+
+    z-index: -1;
 }
 
 .face {
