--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,5 +1,4 @@
 .RedirectButton {
-  all: unset; /* reset all browser styles */
   user-select: none;
   display: block;
   position: relative;
@@ -13,6 +12,7 @@
   font-size: 24px;
   text-align: center;
   font-family: monospace;
+  text-decoration: none; /* React Router <Link /> component has underlines enabled by default */
   font-weight: bold;
   transition: color 0.5s, mix-blend-mode 0.5s;
   z-index: 1;
@@ -46,7 +46,6 @@
 }
 
 .HomeButton {
-  all: unset; /* reset all browser styles */
   user-select: none;
   display: block;
   position: relative;
@@ -64,7 +63,8 @@
   font-family: monospace;
   font-weight: bold;
 
-  text-align: center;
+  text-align: left;
+  width: fit-content;
 
   margin-top: min(5vw, 36px);;
 
