--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -6,13 +6,14 @@
   overflow: hidden;
   background-color: transparent;
   border: none;
+
   /* text display properties */
   mix-blend-mode: difference;
   color: white;
   font-size: 24px;
   text-align: center;
   font-family: monospace;
-  text-decoration: none; /* React Router <Link /> component has underlines enabled by default */
+  text-decoration: none; /* React Router <NavLink /> component has underlines enabled by default */
   font-weight: bold;
   transition: color 0.5s, mix-blend-mode 0.5s;
   z-index: 1;
@@ -51,9 +52,9 @@
   position: relative;
   overflow: visible;
 
-  /* overflow: hidden; */
   background-color: transparent;
   border: none;
+
   /* text display properties */
   mix-blend-mode: difference;
   color: white;
@@ -129,7 +130,6 @@
   position: relative;
   height: 100%;
   width: 100%;
-  /* bottom: 12.5%; */
   transform: translateX(0%);
   transform-origin: center;
   transition: transform 0.5s ease;
