--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -7,6 +7,20 @@
 .about-body-wrapper {
     position: relative;
     display: inline-block;
+
+    /* Override normal text to subtly shift colors according to background */
+    mix-blend-mode: difference;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 25px;
+
+    backdrop-filter: blur(8px) brightness(0.8);
+    -webkit-backdrop-filter: blur(16px);
 }
 
 .summary {
@@ -19,22 +33,7 @@
     flex-shrink: 0;
 }
 
-/* Summary background */
-.summary::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-
-    background-color: #000000;
-    border-radius: 25px;
-
-    opacity: 0.4;
-
-    z-index: -1;
-}
-
-.SummaryText {
+.summary-text {
     /* Disable cursor selection on text */
     pointer-events: none;
     user-select: none;
@@ -52,6 +51,18 @@
 
     mix-blend-mode: difference;
     position: relative;
+
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 25px;
+
+    backdrop-filter: blur(8px) brightness(0.8);
+    -webkit-backdrop-filter: blur(16px);
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    z-index: 1;
 }
 
 .face {
@@ -59,7 +70,7 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    object-position: 50% 30%;
+    object-position: 50% 20%;
     overflow-y: hidden;
 
     aspect-ratio: initial;
@@ -83,20 +94,30 @@
     .face {
         height: 400px;
         object-position: 50% 15%;
+
+        margin-bottom: 10px;
     }
 
     .about-page-wrapper {
         flex-direction: column;
     }
 
+    .summary-text {
+        margin-top: 0;
+        margin-bottom: 0;
+        display: block;
+    }
+
     .about-body-wrapper {
         display: block;
+        margin-top: 10px;
     }
 }
 
 .face-image {
-    vertical-align: bottom; /* Remove default image padding on the bottom or something */
-    pointer-events: none; /* Disable image copy paste */
+    display: block;
+    object-fit: cover;
+    pointer-events: none;
 }
 
 .face-placeholder {
