--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -1,29 +1,20 @@
+/**
+Puts all page content in the center of the screen
+*/
 .Layout-header {
-  max-width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 
-  /* align-self: center; */
   align-items: center;
-  justify-content: center;
-
-  overflow-wrap: break-word;
-  word-break: break-word;
-  white-space: normal;
 }
 
 .Layout-div {
   width: 80%;
-  max-width: 80%;
-  height: fit-content;
-  align-items: left;
-  justify-content: left;
-  overflow-wrap: break-word;
-  word-break: break-word;
-  white-space: normal;
+  height: 100%;
 
-  flex-direction: vertical;
+  /* flex-direction: column;
 
   /* Disable margin collapsing between adjacent components */
   /* https://stackoverflow.com/questions/19718634/how-to-disable-margin-collapsing */
