--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -30,11 +30,10 @@
     padding-top: 10px;
     padding-bottom: 10px;
 
+    margin-bottom: 24px;
+
     background-color: rgba(0, 0, 0, 0);
     border-radius: 25px;
-
-    align-items: center;
-    justify-content: center;
 
     backdrop-filter: blur(8px) brightness(0.8);
     -webkit-backdrop-filter: blur(8px);
