--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,8 +1,8 @@
 .about-page-wrapper {
-    display: flex;
-    flex-direction: row;
-    /* Turns into flex-direction: column for smaller screen widths */
-    /*
+  display: flex;
+  flex-direction: row;
+  /* Turns into flex-direction: column for smaller screen widths */
+  /*
     I don't have a formal enough background in graphic design to describe this with the
     proper terminology, but the page header ("about me") looks like it's slightly off center even though
     it's margins are correct, and it's vertically aligned between the hoem button and page contents.
@@ -11,129 +11,140 @@
 
     This extra margin makes it "feel" more centered.
     */
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .about-body-wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 
-    height: fit-content;
+  height: fit-content;
 
-    /* Override normal text to subtly shift colors according to background */
-    /* Disabled because it looks weird on safari */
-    /* mix-blend-mode: difference; */
+  /* Override normal text to subtly shift colors according to background */
+  /* Disabled because it looks weird on safari */
+  /* mix-blend-mode: difference; */
+}
 
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.about-body-text {
+  display: flex;
+  flex-direction: column;
 
-    margin-bottom: 24px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 25px;
 
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 25px;
+  backdrop-filter: blur(8px) brightness(0.8);
+  -webkit-backdrop-filter: blur(8px);
 
-    backdrop-filter: blur(8px) brightness(0.8);
-    -webkit-backdrop-filter: blur(8px);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  margin-bottom: 10px;
 }
 
 .summary-content {
-    position: sticky;
-    top: 24px;
+  position: sticky;
+  top: 24px;
 }
 
 .summary {
-    overflow: visible;
+  overflow: visible;
 
-    width: max(25%, 120px);
-    height: 100%;
-    margin-right: 5%;
+  width: max(25%, 120px);
+  height: 100%;
+  margin-right: 5%;
 
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
 }
 
 .summary-text {
-    text-align: center;
+  text-align: center;
 
-    overflow: visible;
+  overflow: visible;
 
-    position: relative;
+  position: relative;
 
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 25px;
 
-    backdrop-filter: blur(8px) brightness(0.8);
-    -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px) brightness(0.8);
+  -webkit-backdrop-filter: blur(8px);
 
-    padding-top: 10px;
-    padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
-    z-index: 1;
+  z-index: 1;
+
+  margin-bottom: 10px;
 }
 
 .face {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    object-position: 50% 20%;
-    overflow-y: hidden;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: 50% 20%;
+  overflow-y: hidden;
 
-    aspect-ratio: initial;
-    border-radius: 25px;
+  aspect-ratio: initial;
+  border-radius: 25px;
 
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .face-image {
-    display: block;
-    object-fit: cover;
-    pointer-events: none;
+  display: block;
+  object-fit: cover;
+  pointer-events: none;
 }
 
 .face-placeholder {
-    opacity: 0.5;
-    animation: fade 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) infinite;
+  opacity: 0.5;
+  animation: fade 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) infinite;
 }
 
 @keyframes fade {
-  0%,100% { background-color: var(--colors-primary) }
-  50% { background-color: var(--colors-secondary) }
+  0%,
+  100% {
+    background-color: var(--colors-primary);
+  }
+  50% {
+    background-color: var(--colors-secondary);
+  }
 }
 
 /* Low width screens */
 @media (max-width: 1000px) {
-    .summary {
-        width: 100%;
-        height: fit-content;
-        margin-right: 0;
-        flex-shrink: unset;
+  .summary {
+    width: 100%;
+    height: fit-content;
+    margin-right: 0;
+    flex-shrink: unset;
 
-        /* Disable margin collapsing between adjacent components */
-        /* https://stackoverflow.com/questions/19718634/how-to-disable-margin-collapsing */
-        display: flex;
-    }
+    /* Disable margin collapsing between adjacent components */
+    /* https://stackoverflow.com/questions/19718634/how-to-disable-margin-collapsing */
+    display: flex;
+  }
 
-    .face {
-        height: 400px;
-        object-position: 50% 15%;
-    }
+  .face {
+    height: 400px;
+    object-position: 50% 15%;
+  }
 
-    .about-page-wrapper {
-        flex-direction: column;
-    }
+  .about-page-wrapper {
+    flex-direction: column;
+  }
 
-    .summary-text {
-        display: block;
-    }
+  .summary-text {
+    display: block;
+  }
 
-    .about-body-wrapper {
-        display: flex;
-        flex-direction: column;
-        margin-top: 10px;
-    }
+  .about-body-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 }
