--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -77,7 +77,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
-  z-index: 1;
+  z-index: -1;
 
   margin-bottom: 10px;
 }
@@ -105,6 +105,17 @@
 .face-placeholder {
   opacity: 0.5;
   animation: fade 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) infinite;
+}
+
+.perspective-shift {
+  z-index: -1;
+
+  transition: all 0.3s ease;
+}
+
+.perspective-shift:hover {
+  z-index: 1;
+  transform: scale(1.1) perspective(800px) rotate3d(0, 1, 0, 10deg);
 }
 
 @keyframes fade {
@@ -146,5 +157,11 @@
   .about-body-wrapper {
     display: flex;
     flex-direction: column;
+  }
+
+  .perspective-shift:hover {
+    z-index: 1;
+    /* Perspective thing looks ugly here */
+    transform: scale(1.05);
   }
 }
