--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,4 +1,5 @@
-.Home-header {
+/* Aligns shit to center of screen as we see it */
+.home-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
